syntax = "proto3";

package dns_seed;

/*
 * Copyright 2020 Information Wants To Be Free
 * Visit: https://github.com/iwtbf
 *
 * This project is licensed under the terms of the Apache 2.0 License.
 *
 * Generate using: `[PROJECT_ROOT]$ protoc proto/farmer/farmer.proto --go_out=plugins=grpc:.`
 *
 */

option go_package = "internal/farmer";

service Farmer {
    rpc RequestSeed (SeedRequest) returns (SeedReply) {
    }
}

message SeedRequest {
    string hostAddress = 1;
}

message SeedReply {
    string address = 1;
    bytes publicKeyHash = 2;
}
